--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
     "lucide-react": "^0.511.0",
+    "md-editor-rt": "^5.6.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
